--- a/Invert/Invert_Cabinet.xaml
+++ b/Invert/Invert_Cabinet.xaml
@@ -29,7 +29,13 @@
                     <Button Height="43" Width="77" Canvas.Left="35" Canvas.Top="284" Background="White">
                         <materialDesign:PackIcon Kind="DesktopTower" Foreground="Black" Width="30" Height="28" />
                     </Button>
-                    <ComboBox  Name="Cb_Sch_date" materialDesign:HintAssist.Hint="Кабинет" Canvas.Left="184" Canvas.Top="32" Width="142"  DisplayMemberPath="date_sch"/>
+                    <ComboBox  Name="Cabinet" SelectedIndex="0" Canvas.Left="184" Canvas.Top="32" Width="142">
+                        <TextBlock>Общая инвентаризация</TextBlock>
+                        <TextBlock>Кабинет 1</TextBlock>
+                        <TextBlock>Кабинет 2</TextBlock>
+                        <TextBlock>Кабинет 3</TextBlock>
+                    </ComboBox>
+
                     <TextBlock Name="Result" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" FontSize="18" Canvas.Left="160" Canvas.Top="99"/>
                     <Label Content="—" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" Canvas.Left="123" Canvas.Top="92"/>
                     <TextBlock x:Name="Result_Copy" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" FontSize="18" Canvas.Left="160" Canvas.Top="171"/>
