--- a/Invert/Invert_Cabinet.xaml
+++ b/Invert/Invert_Cabinet.xaml
@@ -6,60 +6,59 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Invert"
         mc:Ignorable="d"
-        Title="Инвентаризация" Width="905.5" Height="484">
+        Title="Инвентаризация" Width="905.5" Height="484" Loaded="Window_Loaded">
     <Grid>
         <TabControl Margin="0,1,0,0" Background="#FFFFFCFC" >
             <TabItem Header="Кабинеты">
                 <Canvas Margin="0,0,-9,0">
-                    <DataGrid Name="Cou_Schedule" HorizontalAlignment="Left" Height="414" AutoGenerateColumns="False" VerticalAlignment="Top" Width="478" Canvas.Top="10" FontSize="12" Canvas.Left="414">
+                    <DataGrid Name="Table_Cabinet" HorizontalAlignment="Left" Height="424" AutoGenerateColumns="False" VerticalAlignment="Top" Width="478" FontSize="12" Canvas.Left="414" IsReadOnly="True">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Binding="{Binding Cou_Date_Schedule.date_sch,StringFormat={}{0:dd.MM.yyyy}}" Header="Номер" Width="300" FontWeight="Medium" />
-                            <DataGridTextColumn Binding="{Binding time_sch}" Header="Кабинет" Width="110"/>
+                            <DataGridTextColumn Binding="{Binding Cou_Date_Schedule}" Header="                                Номер" Width="300" FontWeight="Medium" />
+                            <DataGridTextColumn Binding="{Binding time_sch}" Header="             Кабинет" Width="200"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <Button Height="43" Width="77" Canvas.Left="35" Canvas.Top="90" Foreground="#DDFFFFFF" Click="fgdfg" Background="White">
+                    <Button Height="43" Width="77" Canvas.Left="35" Canvas.Top="90" Click="Monitor_Click" Background="White">
                         <materialDesign:PackIcon Kind="Monitor" Foreground="Black" Width="30" Height="28" />
                     </Button>
-                    <Button Height="43" Width="77" Canvas.Left="35" Canvas.Top="221" Background="White">
+                    <Button Height="43" Width="77" Canvas.Left="35" Canvas.Top="221" Click="Table_Click" Background="White">
                         <materialDesign:PackIcon Kind="Desk" Foreground="Black" Width="30" Height="28" />
                     </Button>
-                    <Button Height="43" Width="77" Canvas.Left="35" Canvas.Top="157" Background="White">
+                    <Button Height="43" Width="77" Canvas.Left="35" Canvas.Top="157" Click="Chair_Click" Background="White">
                         <materialDesign:PackIcon Kind="Chair" Foreground="Black" Width="30" Height="28" />
                     </Button>
-                    <Button Height="43" Width="77" Canvas.Left="35" Canvas.Top="284" Background="White">
+                    <Button Height="43" Width="77" Canvas.Left="35" Canvas.Top="284" Click="Computer_Case_Click" Background="White">
                         <materialDesign:PackIcon Kind="DesktopTower" Foreground="Black" Width="30" Height="28" />
                     </Button>
-                    <ComboBox  Name="Cabinet" SelectedIndex="0" Canvas.Left="184" Canvas.Top="32" Width="142">
+                    <ComboBox  Name="Cb_Cabinet_1" SelectedIndex="0" SelectionChanged="Cb_Cabinet_1_SelectionChanged" Canvas.Left="198" Canvas.Top="32" Width="154">
                         <TextBlock>Общая инвентаризация</TextBlock>
                         <TextBlock>Кабинет 1</TextBlock>
                         <TextBlock>Кабинет 2</TextBlock>
                         <TextBlock>Кабинет 3</TextBlock>
                     </ComboBox>
 
-                    <TextBlock Name="Result" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" FontSize="18" Canvas.Left="160" Canvas.Top="99"/>
+                    <TextBlock Name="Monitor_Count" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" FontSize="18" Canvas.Left="160" Canvas.Top="99"/>
                     <Label Content="—" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" Canvas.Left="123" Canvas.Top="92"/>
-                    <TextBlock x:Name="Result_Copy" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" FontSize="18" Canvas.Left="160" Canvas.Top="171"/>
+                    <TextBlock Name="Chair_Count" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" FontSize="18" Canvas.Left="160" Canvas.Top="171"/>
                     <Label Content="—" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" Canvas.Left="123" Canvas.Top="163"/>
-                    <TextBlock x:Name="Result_Copy1" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" FontSize="18" Canvas.Left="160" Canvas.Top="234"/>
+                    <TextBlock Name="Table_Count" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" FontSize="18" Canvas.Left="160" Canvas.Top="234"/>
                     <Label Content="—" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" Canvas.Left="123" Canvas.Top="226"/>
-                    <TextBlock x:Name="Result_Copy2" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" FontSize="18" Canvas.Left="160" Canvas.Top="296"/>
+                    <TextBlock Name="Computer_Case_Count" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="90" FontSize="18" Canvas.Left="160" Canvas.Top="296"/>
                     <Label Content="—" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" Canvas.Left="123" Canvas.Top="288"/>
                 </Canvas>
             </TabItem>
             <TabItem Header="Общее редактирование">
                 <Canvas>
-                    <DataGrid Name="Cou_Student" HorizontalAlignment="Left" Height="437" AutoGenerateColumns="False" VerticalAlignment="Top" Width="619" Canvas.Top="4">
+                    <DataGrid Name="Table_Editing" HorizontalAlignment="Left" Height="424" AutoGenerateColumns="False" VerticalAlignment="Top" Width="478" FontSize="12" Canvas.Left="414" IsReadOnly="True">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Binding="{Binding last_name}" Header="Фамилия" Width="160"/>
-                            <DataGridTextColumn Binding="{Binding first_name}" Header="Имя" Width="110"/>
-                            <DataGridTextColumn Binding="{Binding middle_name}" Header="Отчество" Width="150"/>
-                            <DataGridTextColumn Binding="{Binding Cou_Group.number}" Header="Группа" Width="1*"/>
+                            <DataGridTextColumn Binding="{Binding Cou_Date_Schedule}" Header="                                Номер" Width="300" FontWeight="Medium" />
+                            <DataGridTextColumn Binding="{Binding time_sch}" Header="             Кабинет" Width="300" FontWeight="Medium"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <ComboBox  Name="Cb_S_group" materialDesign:HintAssist.Hint="Группа" Canvas.Left="700" Canvas.Top="242" Width="141" DisplayMemberPath="number"/>
-                    <Button Content="Добавить" Height="28" Width="112" Canvas.Left="646" Canvas.Top="338"/>
-                    <Button Content="Изменить" Height="28" Width="112" Canvas.Left="776" Canvas.Top="338"/>
-                    <Button Content="Удалить" Height="28" Width="112" Canvas.Left="700" Canvas.Top="413"/>
+                    <ComboBox  Name="Cb_Equipment" materialDesign:HintAssist.Hint="Оборудование" Canvas.Left="132" Canvas.Top="105" Width="141" DisplayMemberPath="number"/>
+                    <ComboBox  Name="Cb_Cabinet_2" materialDesign:HintAssist.Hint="Кабинет" Canvas.Left="132" Canvas.Top="172" Width="141" DisplayMemberPath="number"/>
+                    <Button Content="Добавить" Height="28" Width="112" Canvas.Left="25" Canvas.Top="332" Click="Insert"/>
+                    <Button Content="Изменить" Height="28" Width="112" Canvas.Left="297" Canvas.Top="332" Click="Update"/>
+                    <Button Content="Удалить" Height="28" Width="112" Canvas.Left="161" Canvas.Top="332" Click="Delete"/>
                 </Canvas>
             </TabItem>
         </TabControl>
