--- a/Invert/Authoriazation.xaml
+++ b/Invert/Authoriazation.xaml
@@ -6,11 +6,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Invert"
         mc:Ignorable="d"
-        Title="Инвентаризация" Height="438.495" Width="307.646" WindowStartupLocation="CenterScreen">
+        Title="Инвентаризация" Height="438.495" Width="307.646" AllowsTransparency="True" Background="Transparent" WindowStyle="None" ResizeMode="CanResizeWithGrip" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Button IsDefault = "True" Content="Войти" Height="27" Width="110" Canvas.Left="584" Canvas.Top="242"  Click="Auth_Enter" Margin="92,295,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
-        <TextBox Name="Auth_Login" materialDesign:HintAssist.Hint="Логин" TextWrapping="Wrap"  Width="141" Canvas.Left="617" Canvas.Top="53" Margin="77,150,0,0" HorizontalAlignment="Left" Height="31" VerticalAlignment="Top"/>
-        <Label Content="Добро пожаловать!" Canvas.Left="562" Canvas.Top="53" Margin="56,73,0,0" FontSize="18" FontWeight="Bold" Height="41" VerticalAlignment="Top" HorizontalAlignment="Left" Width="188"/>
-        <PasswordBox Name="Auth_Password" materialDesign:HintAssist.Hint="Пароль" HorizontalAlignment="Left" Margin="77,214,0,0" VerticalAlignment="Top" Width="141"/>
+        <Button  IsDefault = "True" Content="Войти" Panel.ZIndex="1" Height="27" Width="110" Canvas.Left="584" Canvas.Top="242"  Click="Auth_Enter" Margin="106,370,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" UseLayoutRounding="True"/>
+        <TextBox Name="Auth_Login" Panel.ZIndex="1" materialDesign:HintAssist.Hint="Логин" TextWrapping="Wrap"  Width="141" Canvas.Left="617" Canvas.Top="53" Margin="91,239,0,0" HorizontalAlignment="Left" Height="31" VerticalAlignment="Top">
+        </TextBox>
+        <Label Content="Добро пожаловать!" Panel.ZIndex="1" Canvas.Left="562" Canvas.Top="53" Margin="64,4,0,0" FontSize="18" FontWeight="Bold" Height="41" VerticalAlignment="Top" HorizontalAlignment="Left" Width="188"/>
+        <PasswordBox Name="Auth_Password" Panel.ZIndex="1"  materialDesign:HintAssist.Hint="Пароль" HorizontalAlignment="Left" Margin="91,303,0,0" VerticalAlignment="Top" Width="141"/>
+        <Border Background="White" BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="438" VerticalAlignment="Top" Width="308" CornerRadius="20,20,20,20" RenderTransformOrigin="2.784,-2.135"/>
+        <Image Margin="53,50,45,221" Source="icon_flexibleOrder.png" Stretch="Fill"/>
+        <Button Height="Auto" Background="Transparent" BorderThickness="0" Click="Exit" Canvas.Left="35" Canvas.Top="90" Margin="257,0,-4,403">
+            <materialDesign:PackIcon Kind="CloseCircle" Foreground="Red" Width="24" Height="33" />
+        </Button>
     </Grid>
 </Window>
